hydroflow/tests/compile-fail/surface_demux_port_extramissing.stderr
error: Argument specifying the output ports in `demux(..)` does not contain extra port `d`: ($DIR/tests/compile-fail/surface_demux_port_extramissing.rs:15:18) (1/2).
 --> tests/compile-fail/surface_demux_port_extramissing.rs:6:55
  |
6 |         my_demux = source_iter(0..10) -> demux(|item, var_args!(a, b, c)| {
  |                                                       ^^^^^^^^^^^^^^^^^^

error: Port `d` not found in the arguments specified in `demux(..)`'s closure: ($DIR/tests/compile-fail/surface_demux_port_extramissing.rs:6:55) (2/2).
  --> tests/compile-fail/surface_demux_port_extramissing.rs:15:18
   |
15 |         my_demux[d] -> for_each(std::mem::drop);
   |                  ^

error: `demux(..)` closure argument `a` missing corresponding output port.
 --> tests/compile-fail/surface_demux_port_extramissing.rs:6:65
  |
6 |         my_demux = source_iter(0..10) -> demux(|item, var_args!(a, b, c)| {
  |                                                                 ^

warning: unused import: `hydroflow::pusherator::Pusherator`
 --> tests/compile-fail/surface_demux_port_extramissing.rs:1:5
  |
1 | use hydroflow::pusherator::Pusherator;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demux_port_extramissing.rs:2:35
  |
2 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
